Fix recipes list
recipes order as ul list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/Ravioli.html" target="_blank" rel="noopener noreferrer">Mushroom and Spinach Ravioli with Chive Butter Sauce</a>
+    <ul>
+        <li><a href="recipes/Ravioli.html" target="_blank" rel="noopener noreferrer">Mushroom and Spinach Ravioli with Chive Butter Sauce</a></li>
+        <li><a href="recipes/banana-banana-bread.html" target="_blank" rel="noopener noreferrer">Banana Banana Bread</a></li>
+        <li><a href="" target="_blank" rel="noopener noreferrer"></a></li>
+        
+    </ul>
 </body>
 </html>
