--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <ul>
         <li><a href="recipes/Ravioli.html" target="_blank" rel="noopener noreferrer">Mushroom and Spinach Ravioli with Chive Butter Sauce</a></li>
         <li><a href="recipes/banana-banana-bread.html" target="_blank" rel="noopener noreferrer">Banana Banana Bread</a></li>
-        <li><a href="" target="_blank" rel="noopener noreferrer"></a></li>
-        
+        <li><a href="recipes/Ground-Beef.html" target="_blank" rel="noopener noreferrer">Ground Beef Stroganoff Noodles</a></li>    
     </ul>
 </body>
 </html>
